--- a/src/Sharpen.VisualStudioExtension/ReleaseNotes.txt
+++ b/src/Sharpen.VisualStudioExtension/ReleaseNotes.txt
@@ -4,6 +4,12 @@ All notable changes to the "Sharpen" extension will be documented in this file.
 
 The format of the file is based on "Keep a Changelog" (http://keepachangelog.com/en/1.0.0/).
 
+[0.3.0] - 2018-01-16
+====================
+Added
+- "Use out variables in method invocations" suggestion.
+- Grouping of the analysis results by C# language feature.
+
 [0.2.0] - 2017-12-14
 ====================
 Added
