docs: Switches the extension to the version 0.5.0

--- a/src/Sharpen.VisualStudioExtension/ReleaseNotes.txt
+++ b/src/Sharpen.VisualStudioExtension/ReleaseNotes.txt
@@ -4,6 +4,12 @@ All notable changes to the "Sharpen" extension will be documented in this file.
 
 The format of the file is based on "Keep a Changelog" (http://keepachangelog.com/en/1.0.0/).
 
+[0.5.0] - 2018-05-25
+====================
+Added
+- "Use nameof expression in dependency property declarations" suggestion.
+- "Use nameof expression for throwing argument exceptions" suggestion.
+
 [0.4.0] - 2018-05-12
 ====================
 Added
