docs: Switches the extension to the version 0.6.0

--- a/src/Sharpen.VisualStudioExtension/ReleaseNotes.txt
+++ b/src/Sharpen.VisualStudioExtension/ReleaseNotes.txt
@@ -4,6 +4,19 @@ All notable changes to the "Sharpen" extension will be documented in this file.
 
 The format of the file is based on "Keep a Changelog" (http://keepachangelog.com/en/1.0.0/).
 
+[0.6.0] - 2018-10-03
+====================
+Added
+- "Await Task.Delay() instead of calling Thread.Sleep()" suggestion.
+- "Await Task.WhenAll() instead of calling Task.WaitAll()" suggestion.
+- "Await Task.WhenAny() instead of calling Task.WaitAny()" suggestion.
+- "Await task instead of calling Task.Wait()" suggestion.
+- "Await equivalent asynchronous method" suggestion.
+- "Consider awaiting equivalent asynchronous method" suggestion.
+
+Fixed
+- Consecutive analysis runs fully block Visual Studio (#15).
+
 [0.5.0] - 2018-05-25
 ====================
 Added
