docs: Switches the extension to the version 0.6.1

--- a/src/Sharpen.VisualStudioExtension/ReleaseNotes.txt
+++ b/src/Sharpen.VisualStudioExtension/ReleaseNotes.txt
@@ -4,6 +4,12 @@ All notable changes to the "Sharpen" extension will be documented in this file.
 
 The format of the file is based on "Keep a Changelog" (http://keepachangelog.com/en/1.0.0/).
 
+[0.6.1] - 2018-10-07
+====================
+Added
+- Better display of Async and Await findings in the Sharpen Results view.
+- "Await task instead of calling Task.Result" suggestion.
+
 [0.6.0] - 2018-10-03
 ====================
 Added
