--- a/src/Sharpen.VisualStudioExtension/ReleaseNotes.txt
+++ b/src/Sharpen.VisualStudioExtension/ReleaseNotes.txt
@@ -4,6 +4,16 @@ All notable changes to the "Sharpen" extension will be documented in this file.
 
 The format of the file is based on "Keep a Changelog" (http://keepachangelog.com/en/1.0.0/).
 
+[0.8.0] - 2019-02-16
+====================
+Added
+- Support for VS 2019.
+- Loading Sharpen extension asynchronously.
+
+Fixed
+- Sharpen does not support VS 2019 but is listed on VS Marketplace under that version (#19).
+- Dependency alert: Visual Studio MPF 15.0 - already installed MPF 16.0 (#21).
+
 [0.7.0] - 2018-11-18
 ====================
 Added
