--- a/src/Sharpen.VisualStudioExtension/ReleaseNotes.txt
+++ b/src/Sharpen.VisualStudioExtension/ReleaseNotes.txt
@@ -4,6 +4,22 @@ All notable changes to the "Sharpen" extension will be documented in this file.
 
 The format of the file is based on "Keep a Changelog" (http://keepachangelog.com/en/1.0.0/).
 
+[0.9.0] - 2019-06-14
+====================
+Added
+- "Consider replacing using statement with using declaration" suggestion.
+- "Replace using statement with using declaration" suggestion.
+- "Consider replacing switch statement containing only returns with switch expression" suggestion.
+- "Consider replacing switch statement containing only assignments with switch expression" suggestion.
+- "Replace switch statement containing only returns with switch expression" suggestion.
+- "Replace switch statement containing only assignments with switch expression" suggestion.
+- "Enable nullable context and declare local variable as nullable" suggestion.
+- "Enable nullable context and declare property as nullable" suggestion.
+- "Enable nullable context and declare field as nullable" suggestion.
+- "Consider awaiting equivalent asynchronous method and yielding IAsyncEnumerable" suggestion.
+- "Await [...] instead of calling [...]" suggestions support local functions.
+- "Use var keyword in variable declaration with object creation" suggestion.
+
 [0.8.0] - 2019-02-16
 ====================
 Added
